# community

./: .gitignore  LICENSE  README.md  text.txt
examples/rest/: rest.md
examples/rest/gpt5-openai-agents-sdk-polygon-mcp/: README.md  env.example  main.py  pyproject.toml
examples/rest/gpt5-openai-agents-sdk-polygon-mcp/reports/equities/: example.md
examples/rest/market-parser-polygon-mcp/: .env_example  .gitignore  README.md  market_parser_demo.py  pyproject.toml
examples/rest/options-0-dte-covered-call/: README.md  pyproject.toml  screener.py
examples/rest/options-advanced-covered-call/: README.md  env.example  pyproject.toml  screener.py
examples/rest/options-iron-condor/: .env.example  README.md  iron_condor_plan.md  pyproject.toml  screener.py
