[project]
name = "gpt5-polygonio-demo"
version = "0.1.0"
description = "Agentic workflow demo using GPT-5, OpenAI Agents SDK and Polygon.io"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Alex Novotny" }
]
license = { file = "LICENSE" }
dependencies = [
  "openai-agents",
  "pydantic",
  "rich",
  "python-dotenv", 
  "openai"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 


