[project]
name = "iron-condor-screener"
version = "0.1.0"
description = "Iron Condor Screener & Analyzer - Find the best iron condor opportunities with risk analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Alex Novotny" }
]
license = { file = "LICENSE" }
dependencies = [
  "python-dotenv>=1.0.0",
  "polygon-api-client>=1.13.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 
